// Autogenerated by:
// ../../src/tools/ftrace_proto_gen/ftrace_proto_gen.cc
// Do not edit.

syntax = "proto2";
package perfetto.protos;

message DrmSchedJobFtraceEvent {
  optional uint64 entity = 1;
  optional uint64 fence = 2;
  optional int32 hw_job_count = 3;
  optional uint64 id = 4;
  optional uint32 job_count = 5;
  optional string name = 6;
}
message DrmRunJobFtraceEvent {
  optional uint64 entity = 1;
  optional uint64 fence = 2;
  optional int32 hw_job_count = 3;
  optional uint64 id = 4;
  optional uint32 job_count = 5;
  optional string name = 6;
}
message DrmSchedProcessJobFtraceEvent {
  optional uint64 fence = 1;
}
message DrmSchedJobAddDepFtraceEvent {
  optional uint64 fence_context = 1;
  optional uint64 fence_seqno = 2;
  optional uint64 ctx = 3;
  optional uint64 seqno = 4;
}
message DrmSchedJobDoneFtraceEvent {
  optional uint64 fence_context = 1;
  optional uint64 fence_seqno = 2;
}
message DrmSchedJobQueueFtraceEvent {
  optional string name = 1;
  optional uint32 job_count = 2;
  optional int32 hw_job_count = 3;
  optional string dev = 4;
  optional uint64 fence_context = 5;
  optional uint64 fence_seqno = 6;
  optional uint64 client_id = 7;
}
message DrmSchedJobRunFtraceEvent {
  optional string name = 1;
  optional uint32 job_count = 2;
  optional int32 hw_job_count = 3;
  optional string dev = 4;
  optional uint64 fence_context = 5;
  optional uint64 fence_seqno = 6;
  optional uint64 client_id = 7;
}
message DrmSchedJobUnschedulableFtraceEvent {
  optional uint64 fence_context = 1;
  optional uint64 fence_seqno = 2;
  optional uint64 ctx = 3;
  optional uint64 seqno = 4;
}
